# bary-vector

./: .env.example  .gitignore  BaryGraph_Kaikki_PoC_v0.2.md  BaryGraph_Kaikki_PoC_v0.3.md  BaryGraph_Kaikki_PoC_v0.4.md  BaryGraph_Kaikki_PoC_v0_5.md  BaryGraph_v1.1.md  CLAUDE.md  Makefile  README.md  VISION-KAIKKI-POC.md  VISION-KAIKKI-POCv1.md  VISION-KAIKKI-POCv2.md  docker-compose.yml  example_kaikii-en.jsonl  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
indexes/: vector_index.json
lib/: bary_vec.py  checkpoint.py  config.py  db.py  disambiguate.py  docs.py  embed.py  llm.py  log.py  match.py  parse.py  schema.py
scripts/: _base.py  mcp_remote.sh  mcp_server.py  preflight.py  s01_parse.py  s02_embed.py  s03_insert_nodes.py  s04_l15_edges.py  s05_word_vectors.py  s06_l14_edges.py  s07_orphan_reentry.py  s08_metabary.py  s09_summarize.py  s10_index.py  setup_vps.sh
scripts/dev/: fetch_kaikki.sh  make_fixture.py
scripts/eval/: ab_summary.py  holdout.py  recall.py
tests/: conftest.py
tests/fixtures/: kaikki-sample.jsonl
tests/integration/: test_smoke_pipeline.py
tests/unit/: test_bary_vec.py  test_checkpoint.py  test_config.py  test_disambiguate.py  test_docs.py  test_match.py  test_parse.py  test_preflight.py  test_schema.py  test_stage_guard.py
